--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
-fastapi==0.115.0
-uvicorn[standard]==0.30.1
 weaviate-client==3.25.3
 requests==2.32.3
 python-dotenv==1.0.1
 beautifulsoup4==4.12.3
 lxml==5.3.0
-pypandoc==1.13
-openai>=1.0.0
+openai==1.30.1
